apps/base/flux-webhook/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  parentRefs:
    - name: amajor-cloud-gateway
      namespace: envoy-gateway-system
  hostnames:
    - webhook.amajor.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
