apps/base/flux-webhook/ingressroute-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: flux-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook-http
  namespace: flux-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`flux-webhook.amajor.cloud`) && PathPrefix(`/hook/`)
      kind: Rule
      services:
        - name: webhook-receiver
          port: 80
      middlewares:
        - name: redirect-to-https
