apps/base/flux-webhook/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux-webhook.amajor.cloud`) && PathPrefix(`/hook/`)
      kind: Rule
      services:
        - name: webhook-receiver
          port: 80
  tls: {}
